--- a/AplicacaoLms/static/noticias.css
+++ b/AplicacaoLms/static/noticias.css
@@ -5,7 +5,7 @@
 .h2{text-transform: uppercase; line-height: 10px; color: #116fff;  
 	font-weight: 700; margin: 3% auto 20px; text-align: center; font-size: 1.7em}
 
-.divTexto{color: white; text-align:center; width:65%; font-size: 1em; margin-left: 16%;}
+.divTexto{color: white; text-align:center; width:65%; font-size:  1.2em; margin-left: 16%; line-height:130%;}
 
 .divBox{width: 100%;}
 .divBox img{width: 10%; -webkit-box-sizing: border-box; margin: 0 0 0 11%;}
@@ -44,3 +44,28 @@
 .p{
 	margin-left: 47%;
 }
+
+
+h5 {
+    border-width: medium;
+    border-style: double;
+	border-color: rgba(29,59,66,.88);;
+	color: white;
+	background-color:rgba(29,59,66,.88);;
+	margin-left: 30%;
+	margin-right: 30%;
+	transform: skew(-24deg);
+	letter-spacing: 3px;
+	text-transform: uppercase;
+    margin-top: 1%;
+	margin-bottom:5% ;
+	text-align: center;
+	font-size:150%;
+  }
+  
+ h5:hover{background-color: blue; border: 1px white solid;} 
+
+
+ .faculdade{
+	 color: white; text-align:center; width:65%; font-size: 1.3em; margin-left: 16%;
+ }
