--- a/AplicacaoLms/templates/noticias.html
+++ b/AplicacaoLms/templates/noticias.html
@@ -31,8 +31,32 @@
     <div class="p">
             <img src="https://www.impacta.edu.br/themes/wc_agenciar3/images/logo-center.png" alt="[]" title=""></div>
     
+       <h3 class="h2">Faculdade Impacta</h3>
 
+       <div class="divTexto">
+        <p class="texto"> Fundada em 2003, a Faculdade Impacta é considerada uma das melhores instituições de tecnologia da América Latina devido ao seu intenso compromisso com a educação ao longo dos anos e à transformação da sociedade através da tecnologia. <br> <br> 
+
+            Referência nas áreas de TI, Gestão e Design, a Impacta conta com cursos de Graduação, Pós-Graduação, Extensão, MBA e cursos técnicos que preparam seus alunos para os desafios do mercado de trabalho, além de um time de mestres e doutores com larga experiência profissional. <br> <br> 
+            
+            O alto nível de empregabilidade é uma das principais características da Faculdade Impacta, que é reconhecida pelas maiores empresas do País, em que seus alunos garantem posições de destaque no mercado de trabalho após o término do curso. <br> <br> 
+            
+            A Instituição ainda conta com infraestrutura moderna, avaliação positiva do MEC, cursos estrelados no Guia do Estudante e parcerias estratégicas com grandes empresas para oferecer a melhor formação para os alunos. </p>
+  </div>
     
+
+
+                <h5>Missão</h5>
+
+                <p class="faculdade">
+                 A Faculdade Impacta Tecnologia tem como missão disseminar o conhecimento 
+                 no País e contribuir para a construção de uma sociedade mais igualitária através das novas tecnologias aliadas à educação.
+                </p>
+
+                <h5>Visão</h5>
+
+                <h5>Valores</h5>
+                
+            
     <h2 class="h2">PRÊMIOS E RECONHECIMENTOS </h2>
 
      <div class="divTexto">
