--- a/AplicacaoLms/static/portal.css
+++ b/AplicacaoLms/static/portal.css
@@ -30,29 +30,141 @@ right: -2%;
 .title-default h1{
     margin-top:10%;
     font-size :28px;
-    right: 40%;
+    right: 10%;
     color:#052C55;
     float: left;
     text-indent :14px;
 }
 
-table {border-collapse: collapse;  }
-
-#tabela2{
-    margin-top: 70%; float: left; text-indent: 14px;
+#container-bulletin div.well-fit-default {
+    margin-top: 5px;
+}
+#contents-bulletin container span12 {
+    width: 100%;
 }
 
-/*CABEÇALHO*/
-#center{text-align: center; }
+#row-fluid {
+    float: left;
+    margin-left: 2.564102564%;
+}
+
+#row-fluid {
+    display: block;
+    min-height: 28px;
+    box-sizing: border-box;
+    float: left;
+   
+}
 
 
 
-.prova{ text-align: center; border: 1px black solid; padding-left: 20px; padding-right: 20px; padding-top: 5px; padding-bottom: 5px; background-color: #FDF500;}
-.prova{ text-align: center; border: 1px black solid; padding-left: 20px; padding-right: 20px; padding-top: 5px; padding-bottom: 5px; background-color: #FDF500;}
-.prova{ text-align: center; border: 1px black solid; padding-left: 20px; padding-right: 20px; padding-top: 5px; padding-bottom: 5px; background-color: #FDF500;}
-.prova{ text-align: center; border: 1px black solid; padding-left: 20px; padding-right: 20px; padding-top: 5px; padding-bottom: 5px; background-color: #FDF500;}
-.media{ text-align: center;border: 1px black solid; padding-left: 20px; padding-right: 20px; padding-top: 5px; padding-bottom: 5px;  background-color: #05CD02; }
-.AC{text-align: center;border: 1px black solid; padding-left: 20px; padding-right: 20px; padding-top: 5px; padding-bottom: 5px; background-color: #01FD0A;}
-.style{text-align: center;border: 1px black solid; padding-left: 20px; padding-right: 20px; padding-top: 5px; padding-bottom: 5px; background-color: #f1ffff;}
-.sub{text-align: center; border: 1px black solid; padding-left: 20px; padding-right: 20px; padding-top: 5px; padding-bottom: 5px; background-color: #F8DD00;}
-.mediafinal{text-align: center; border: 1px black solid; padding-left: 20px; padding-right: 20px; padding-top: 5px; padding-bottom: 5px; background-color: #00FEF1;}
+.well-fit-default {
+    font-size: 14px;
+    font-weight: 100;
+    text-align: justify;
+}
+
+
+[class*="span"] {
+    float: left;
+    margin-left: 30px;
+    margin-top: 4%;
+}
+
+
+
+#table-dados-aluno, table#table-dados-aluno tr th.borderless {
+    border: 0px;
+    margin-top: -25px;
+}
+
+.table th {
+    font-weight: bold;
+}
+.table th, .table td {
+    padding: 8px;
+    line-height: 18px;  
+    text-align: left;
+
+}
+table th, table th *, span.bold, .contents-bulletin.container h5 {
+    font-family: "EurostileBold", Helvetica, sans-serif;
+}
+
+
+ th {
+    display: table-cell;
+   ;
+}
+
+.table-bordered {
+
+    border-collapse: separate;  
+}
+
+table {
+    border-spacing: 0;
+}
+
+#table-dados-aluno tr th.borderless {
+    border: 0px;
+    margin-top: -25px;
+}
+.table-bordered thead:first-child tr:first-child th:first-child,  {
+    border-top-left-radius: 4px;
+
+}
+
+
+
+.table-bordered th, .table-bordered td {
+    border-left: 1px solid #dddddd;
+}
+.table th {
+    font-weight: bold;
+}
+.table th, .table td {
+    padding: 8px;
+    line-height: 18px;
+    text-align: left;
+    vertical-align: top;
+    border-top: 1px solid #dddddd;
+}
+table th, table th *, span.bold, .contents-bulletin.container h5 {
+    font-family: "EurostileBold", Helvetica, sans-serif;
+}
+
+
+ th {
+    display: table-cell;
+  
+}
+
+.table-bordered {
+    border-collapse: separate;
+    
+}
+
+table {
+
+    border-spacing: 0;
+}
+.well-fit-default {
+    font-size: 14px;
+    font-weight: 100;
+        text-align: justify;
+}
+
+table#table-dados-aluno tr .table-logo {
+    padding: 0 5px;
+    vertical-align: middle;
+}
+
+table#table-dados-aluno tr td {
+    text-align: center;
+}
+
+img {
+    max-width: 100%;
+    vertical-align: middle;
+    border: 0;}
